--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </section>
     <section class="com-section">
         <h2 class="title-com">Наша команда</h2>
-          <ul class="com-style">
+          <ul class="com-style design">
             <li>   
                 <img src="./img/img1.jpg" alt="Ігор Дем'яненко" width="270">
                 <h3 class="titles">Ігор Дем'яненко</h3>
