--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
         <div class="container">
             <a href="" lang="en" class="logo-foot">Web<span class="logo-foot-sec">Studio</span></a>
             <address class="address-style">
-            <ul class="link-style-foot">
+            <ul class="list-style-foot">
                 <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" 
                     rel="noopener noreferrer nofollow" class="link-add">
                     м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li><a href="Mailto:info@devstudio.com" class="link-cont-two">info@devstudio.com</a></li>
-                <li><a href="Tel:+380961111111" class="link-cont-two">+38 096 111 11 11</a></li>
+                <li><a href="Mailto:info@devstudio.com" class="link-cont-foot">info@devstudio.com</a></li>
+                <li><a href="Tel:+380961111111" class="link-cont-foot">+38 096 111 11 11</a></li>
             </ul>
             </address>
         </div>
