--- a/index.html
+++ b/index.html
@@ -79,34 +79,42 @@
     <section class="section team-section">
         <div class="container">
             
-            <h2 class="title-com">Наша команда</h2>
+            <h2 class="title-team-section">Наша команда</h2>
             <ul class="list-cards">
                 <li>   
-                    <img src="./img/img1.jpg" alt="Ігор Дем'яненко" width="270">
-                    <h3 class="titles">Ігор Дем'яненко</h3>
-                    <p class="desc">Product Designer</p>
+                    <img class="card-image" src="./img/img1.jpg" alt="Ігор Дем'яненко" width="270">
+                    <div class="data-cards">
+                        <h3 class="titles-cards">Ігор Дем'яненко</h3>
+                        <p class="desc-cards">Product Designer</p>
+                    </div>
                 </li>
                 <li>
-                    <img src="./img/img2.jpg" alt="Ольга Рєпіна" width="270">
-                    <h3 class="titles">Ольга Рєпіна</h3>
-                    <p class="desc">Frontend Developer</p>
+                    <img class="card-image" src="./img/img2.jpg" alt="Ольга Рєпіна" width="270">
+                    <div class="data-cards">    
+                        <h3 class="titles-cards">Ольга Рєпіна</h3>
+                        <p class="desc-cards">Frontend Developer</p>
+                    </div>
                 </li>
                 <li>
-                    <img src="./img/img3.jpg" alt="Микола Тарасов" width="270">
-                    <h3 class="titles">Микола Тарасов</h3>
-                    <p class="desc">Marketing</p>
+                    <img class="card-image" src="./img/img3.jpg" alt="Микола Тарасов" width="270">
+                    <div class="data-cards">   
+                        <h3 class="titles-cards">Микола Тарасов</h3>
+                        <p class="desc-cards">Marketing</p>
+                    </div>
                 </li>
                 <li>
-                    <img src="./img/img4.jpg" alt="Михайло Єрмаков" width="270">
-                    <h3 class="titles">Михайло Єрмаков</h3>
-                    <p class="desc">UI Designer</p>
+                    <img class="card-image" src="./img/img4.jpg" alt="Михайло Єрмаков" width="270">
+                    <div class="data-cards">
+                        <h3 class="titles-cards">Михайло Єрмаков</h3>
+                        <p class="desc-cards">UI Designer</p>
+                    </div>
                 </li>
             </ul>
             
         </div>
     </section>
     </main>
-    <footer class="bgd">
+    <footer class="footer">
         <div class="container">
             <a href="" lang="en" class="logo-foot">Web<span class="logo-foot-sec">Studio</span></a>
             <address class="address-style">
