--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
         </div>
     </section> 
     <section class="section section-busi">
-        <h2 class="title-busi">Чим ми займаємося</h2>
-        <ul class="list-images">
-            <li><img src="./img/img11.jpg" alt="Десктопні розробки" width="370"></li> 
-            <li><img src="./img/img22.jpg" alt="Мобільні розробки" width="370"></li> 
-            <li><img src="./img/img33.jpg" alt="Дизайнерські рішення" width="370"></li> 
-        </ul>     
+        <div class="container">    
+            <h2 class="title-busi">Чим ми займаємося</h2>
+            <ul class="list-images">
+                <li><img src="./img/img11.jpg" alt="Десктопні розробки" width="370"></li> 
+                <li><img src="./img/img22.jpg" alt="Мобільні розробки" width="370"></li> 
+                <li><img src="./img/img33.jpg" alt="Дизайнерські рішення" width="370"></li> 
+            </ul>  
+        </div>
     </section>
     <section class="section team-section">
         <div class="container">
