--- a/portfolio.html
+++ b/portfolio.html
@@ -38,11 +38,11 @@
              <h1 class="title-hidd">Веб Студіо: можливості і приклади</h1>
                 
                 <ul class="list-button">
-                    <li><button type="button" class="button button-one">Усі</button></li>
-                    <li><button type="button" class="button button-two">Веб-сайти</button></li>
-                    <li><button type="button" class="button button-three">Додатки</button></li>
-                    <li><button type="button" class="button button-four">Дизайн</button></li>
-                    <li><button type="button" class="button button-five">Маркетинг</button></li>
+                    <li><button type="button" class="button">Усі</button></li>
+                    <li><button type="button" class="button">Веб-сайти</button></li>
+                    <li><button type="button" class="button">Додатки</button></li>
+                    <li><button type="button" class="button">Дизайн</button></li>
+                    <li><button type="button" class="button">Маркетинг</button></li>
                 </ul>
                 
 
